Added single jar plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,24 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
+            <!-- build jar with deps -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <developers>
