--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,30 @@
         <powermock.version>1.5.5</powermock.version>
     </properties>
 
+    <scm>
+        <connection>scm:git:http://github.com/Jaspersoft/jrs-rest-java-client</connection>
+        <developerConnection>scm:git:https://github.com/Jaspersoft/jrs-rest-java-client</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <!--<repository>-->
+            <!--<id>jaspersoft</id>-->
+            <!--<name>jaspersoft-releases</name>-->
+            <!--<url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-releases</url>-->
+        <!--</repository>-->
+        <snapshotRepository>
+            <id>jaspersoft</id>
+            <name>jaspersoft-snapshots</name>
+            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.jaspersoft.jasperserver</groupId>
             <artifactId>jasperserver-dto</artifactId>
-            <version>5.6.1</version>
+            <version>6.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
@@ -42,6 +61,8 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>2.5.1</version>
         </dependency>
+
+        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -60,11 +81,13 @@
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
             <version>${powermock.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-easymock</artifactId>
             <version>${powermock.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- EasyMock -->
@@ -72,6 +95,7 @@
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <version>3.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -101,23 +125,7 @@
         </dependency>
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>jrs-ce-releases</id>
-            <name>JasperReports Server CE releases repository</name>
-            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-releases/</url>
-        </repository>
-        <repository>
-            <id>jrs-ce-snapshots</id>
-            <name>JasperReports Server CE snapshots repository</name>
-            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-snapshots/</url>
-        </repository>
-    </repositories>
-    <scm>
-        <connection>scm:git:http://github.com/Jaspersoft/jrs-rest-java-client</connection>
-        <developerConnection>scm:git:https://github.com/Jaspersoft/jrs-rest-java-client</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+
     <build>
         <plugins>
             <plugin>
@@ -177,7 +185,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.12</version>
                 <configuration>
-                    <!-- it gives more memory for IT -->
                     <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                 </configuration>
                 <executions>
