--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,7 +5,7 @@ url=http://localhost:4444/jasperserver-pro
 jasperserverVersion=v6_0_0
 authenticationType=REST
 logHttp=true
-logHttpEntity=false
+logHttpEntity=true
 restrictedHttpMethods=false
 contentMimeType=JSON
 acceptMimeType=JSON
