Resolved issue #122 (refactoring in integration tests, new method in RestClientConfiguration)

--- a/src/integration-test/resources/test_config.properties
+++ b/src/integration-test/resources/test_config.properties
@@ -1,5 +1,7 @@
 #
 url=http://localhost:4444/jasperserver-pro
+username=superuser
+password=superuser
 #connectionTimeout=
 #readTimeout=
 jasperserverVersion=v6_1_0
