--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <version>2.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+
+
         <!-- Jackson
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
