Updated readme.md (Configuration section)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,5 +7,6 @@ authenticationType=SPRING
 logHttp=true
 logHttpEntity=true
 restrictedHttpMethods=false
+handleErrors=true
 contentMimeType=JSON
 acceptMimeType=JSON
