--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>com.jaspersoft.jasperserver</groupId>
             <artifactId>jasperserver-dto</artifactId>
-            <version>6.2.0</version>
+            <version>7.0-domain-designer-SNAPSHOT</version>
         </dependency>
 
         <!-- Jersey-->
