Reverted pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jaspersoft</groupId>
-    <artifactId>jrs-rest-java-client</artifactId>
+    <artifactId>6.3.4-SNAPSHOT</artifactId>
     <version>develop-context-SNAPSHOT</version>
     <name>REST client for JasperReports server</name>
     <url>http://github.com/Jaspersoft/jrs-rest-java-client</url>
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <powermock.version>1.5.5</powermock.version>
-        <jasperserver-dto.version>domain-designer-SNAPSHOT</jasperserver-dto.version>
+        <jasperserver-dto.version>trunk-SNAPSHOT</jasperserver-dto.version>
     </properties>
 
     <scm>
