implemented delete request for multiply jobs, Updated JobsService(switched to server DTO)
(cherry picked from commit 5fc3dcb9bdeb56588fa524823972ecae04f23343)

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <powermock.version>1.5.5</powermock.version>
-        <jasperserver-dto.version>6.3.0</jasperserver-dto.version>
+        <jasperserver-dto.version>trunk-SNAPSHOT</jasperserver-dto.version>
     </properties>
 
     <scm>
