--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12</version>
                 <configuration>
-                    <skipTests>false</skipTests>
+                    <skipTests>true</skipTests>
                     <testFailureIgnore>false</testFailureIgnore>
                     <excludes>
                         <exclude>**/IT.java</exclude>
