--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>com.jaspersoft</groupId>
     <artifactId>jrs-rest-java-client</artifactId>
-    <version>8.2.0</version>
+    <version>9.0.0</version>
     <name>REST client for JasperReports server</name>
     <url>http://github.com/Jaspersoft/jrs-rest-java-client</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jasperserver-dto.version>8.2.0</jasperserver-dto.version>
+        <jasperserver-dto.version>9.0.0</jasperserver-dto.version>
         <powermock.version>2.0.9</powermock.version>
         <jersey.version>2.39</jersey.version>
         <jackson.version>2.13.5</jackson.version>
@@ -27,6 +27,11 @@
 
     <repositories>
         <repository>
+            <id>mvn-central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
             <id>jaspersoft-clients-snapshots</id>
             <name>Jaspersoft clients snapshots</name>
             <url>https://jaspersoft.jfrog.io/jaspersoft/jaspersoft-clients-releases</url>
@@ -35,6 +40,11 @@
             <id>central</id>
             <name>jaspersoft-releases</name>
             <url>https://jaspersoft.jfrog.io/jaspersoft/jrs-ce-releases</url>
+        </repository>
+        <repository>
+            <id>branch-central</id>
+            <name>jaspersoft-releases</name>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/jrs-ce-snapshots</url>
         </repository>
     </repositories>
 
